# PLMC

./: .DONOTREADME.md  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  Doxyfile.in  PLMC.cbp  README.md  bunching.sh  ideas.txt  index.html  make-exec.sh  make-exec.sh~  menu.sh  notes.txt  plmc.md  search.html  todos.txt
lib/: CMakeLists.txt  data_precisions.f90
lib/src/: class_box_factory.f90  class_box_geometry.f90  class_box_potential.f90  class_boxed_spheres.f90  class_candidates_selector.f90  class_cells_potential.f90  class_change_tuner.f90  class_changed_coordinates.f90  class_changes_factory.f90  class_changes_writer.f90  class_chemical_potential.f90  class_component_chemical_potential.f90  class_component_coordinates.f90  class_component_coordinates_writer.f90  class_component_diameter.f90  class_component_dipolar_moments.f90  class_component_energy_writer.f90  class_component_exchange.f90  class_component_moment_norm.f90  class_component_number.f90  class_component_orientations.f90  class_component_positions.f90  class_component_potential.f90  class_component_total_moment.f90  class_components_energies_writer.f90  class_coordinates.f90  class_diameter.f90  class_diameters.f90  class_dipolar_moment.f90  class_dipolar_moment_norms.f90  class_dipolar_moments.f90  class_dipolar_spheres.f90  class_ewald_real_component.f90  class_ewald_real_pair.f90  class_ewald_real_particles.f90  class_ewald_real_visitor.f90  class_ewald_summation_real.f90  class_external_field.f90  class_field_expression.f90  class_floor_penetration.f90  (+153 more)
mod/: CMakeLists.txt
mod/src/: class_dipolar_layer_correction.f90  class_discrete_observable.f90  class_distribution.f90  class_distribution_functions.f90  class_electronic_layer_correction.f90  class_electronic_layer_correction.f90_  class_ewald_summation_bound.f90  class_ewald_summation_real.f90  class_ewald_summation_reci.f90  class_ewald_summation_self.f90  class_external_field.f90  class_hard_spheres.f90  class_hard_spheres_observables.f90  class_hard_spheres_potential.f90  class_hard_spheres_units.f90  class_identity_matrix.f90  class_neighbour_cells.f90  class_physical_system.f90  class_small_move.f90  class_small_rotation.f90  class_system.f90  connected_components.cpp  data_constants.f90  data_neighbour_cells.f90  data_precisions.f90  data_write.f90  module_algorithms.f90  module_arguments.f90  module_arguments_monte_carlo.f90  module_arguments_system.f90  module_data.f90  module_geometry.f90  module_linear_algebra.f90  module_mathematics.f90  module_physics_macro.f90  module_physics_micro.f90  module_types_macro.f90  module_types_micro.f90  module_write.f90  temp.f90
modules/: CMakeLists.txt  index.md
modules/changes/: class_change_tuner.f90  class_changed_coordinates.f90  class_component_exchange.f90  class_moved_positions.f90  class_rotated_orientations.f90  classes_changed_box_size.f90  classes_changed_box_size_ratio.f90  classes_coordinates_copier.f90  module_change_tuning.f90  module_move_tuning.f90  procedures_changed_box_size_ratio_factory.f90  procedures_changed_boxes_size_ratio_factory.f90  procedures_changes_component_factory.f90  procedures_changes_factory.f90  procedures_changes_properties.f90  procedures_coordinates_copier_factory.f90  procedures_maximum_box_compression_factory.f90  types_changes_component_wrapper.f90  types_changes_wrapper.f90
modules/common/: class_hetero_couples.f90  class_number_to_string.f90  classes_hetero_couples.f90  classes_number_to_string.f90  classes_plmc_factory.f90  classes_plmc_propagator.f90  data_arguments.f90  data_constants.f90  data_input_prefixes.f90  data_output_objects.f90  data_prefixes.f90  data_strings.f90  data_wrappers_prefix.f90  module_plmc_iterations.f90  module_string_wrapper.f90  procedures_checks.f90  procedures_command_arguments.f90  procedures_environment_inquirers.f90  procedures_exploration_inquirers.f90  procedures_geometry.f90  procedures_help.f90  procedures_hetero_couples_factory.f90  procedures_json_data_factory.f90  procedures_logical_factory.f90  procedures_markov_chain_explorer_factory.f90  procedures_markov_chain_generator_factory.f90  procedures_mixture_inquirers.f90  procedures_observables_factory.f90  procedures_physical_model_factory.f90  procedures_plmc_factory.f90  procedures_plmc_help.f90  procedures_plmc_iterations.f90  procedures_plmc_propagator.f90  procedures_plmc_propagator_factory.f90  procedures_plmc_reset.f90  procedures_plmc_resetter.f90  procedures_plmc_visit.f90  procedures_plmc_visitor.f90  procedures_plmc_write.f90  procedures_plmc_writer.f90  (+22 more)
modules/dipolar_interactions/: class_des_convergence_parameter.f90  class_des_real_component.f90  class_des_real_pair.f90  class_des_real_visitor.f90  class_des_reci_structure.f90  class_des_reci_visitor.f90  class_des_reci_weight.f90  class_des_self_component.f90  class_des_surf_mixture.f90  class_dlc_structures.f90  class_dlc_visitor.f90  class_dlc_weight.f90  class_structure_factor.f90  class_structure_visitor.f90  classes_des_convergence_parameter.f90  classes_des_real_visitor.f90  classes_des_reci_structure.f90  classes_des_self_component.f90  classes_des_surf_mixture.f90  classes_dipolar_interactions_facade.f90  classes_dipolar_neighbourhood.f90  classes_dipolar_visitor.f90  classes_dlc_structures.f90  classes_dlc_visitor.f90  classes_dlc_weight.f90  classes_structure_factor.f90  classes_structure_visitor.f90  index.md  procedures_des_convergence_parameter_factory.f90  procedures_des_real_factory.f90  procedures_des_reci_factory.f90  procedures_des_self_factory.f90  procedures_des_surf_factory.f90  procedures_des_surf_mixture_factory.f90  procedures_dipolar_interactions_facade_factory.f90  procedures_dipolar_interactions_facades_factory.f90  procedures_dipolar_interactions_factory.f90  procedures_dipolar_interactions_micro.f90  procedures_dipolar_interactions_resetter.f90  procedures_dipolar_interactions_visitor.f90  (+7 more)
modules/environment/: centered_block_penetration.tex  class_box_size_checker.f90  class_external_field.f90  class_field_expression.f90  index.md  (+29 more)
test/: CMakeLists.txt
(+3384 files in other folders)
